working bar UI
